# wishful

./: .env.template  .gitignore  AGENTS.md  CONCEPTS.md  LICENSE  README.md  RELEASE_CHECKLIST.md  STRATEGY.md  coverage.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: audit.yml  ci.yml  docs.yml  publish.yml  release.yml  smoke.yml
.wishful/: data.py  dates.py  logs.py  numbers.py  story.py  text.py
docs/: CHANGELOG.md
docs-site/: astro.config.mjs  package-lock.json  package.json
docs-site/src/content/: config.ts
docs-site/src/content/docs/: advanced-context-discovery.mdx  changelog.mdx  cli.mdx  configuration.mdx  contributing.mdx  explore.mdx  how-it-works.mdx  index.mdx  quickstart.mdx  types.mdx
docs-site/src/styles/: theme.css
docs/ideas/: advanced_context_discovery.md  codex-sdk-native-integration.md
docs/plans/: 2026-06-11-001-fix-v0-3-0-release-readiness-plan.md  2026-06-11-002-refactor-post-0-3-0-quality-plan.md
docs/proofs/: README.md
docs/proofs/0.3.0/: examples-sweep.md  summary.json
docs/reviews/: 2026-06-11-code-review.md
docs/reviews/2026-06-11-smoke-proof/: summary.json
docs/solutions/best-practices/: blocklists-must-enumerate-alias-entry-points.md  reasoning-model-token-budget-and-falsification-gate.md  security-hardening-needs-a-false-positive-review.md
docs/specs/001-wishful-evolve/: implementation-plan.md
docs/specs/002-wishful-context/: implementation-plan.md  product-requirements.md  solution-design.md
docs/specs/003-wishful-code-search-workbench/: concept-plan.md
docs/wireframes/: wishful-cli-dashboard.excalidraw
examples/: 00_quick_start.py  01_json_yaml.py  02_web_scraping.py  03_data_validation.py  04_format_conversion.py  05_api_client.py  06_omg_why.py  07_typed_outputs.py  08_dynamic_vs_static.py  09_context_shenanigans.py  10_cosmic_horror_line_by_line.py  11_logging.py  12_explore.py  13_explore_advanced.py  14_evolve.py  15_cli_and_config.py  16_safety_and_review.py  examples.py
src/wishful/: __init__.py  __main__.py  config.py  exceptions.py  logging.py  ui.py
src/wishful/cache/: __init__.py  manager.py
src/wishful/core/: __init__.py  discovery.py  execution.py  finder.py  loader.py
src/wishful/dynamic/: __init__.py  __init__.pyi
src/wishful/evolve/: __init__.py  evolver.py  exceptions.py  history.py  mutation.py
src/wishful/explore/: __init__.py  exceptions.py  explorer.py  progress.py  strategies.py  variant.py
src/wishful/llm/: __init__.py  client.py  prompts.py
src/wishful/safety/: __init__.py  validator.py
src/wishful/static/: __init__.py  __init__.pyi
src/wishful/types/: __init__.py  registry.py
tests/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_discovery.py  test_evolve.py  test_evolve_result.py  test_execution.py  test_explore.py  test_import_hook.py  test_llm.py  test_logging.py  test_namespaces.py  test_safety.py  test_types.py
tests/smoke/: conftest.py  test_harness.py  test_real_model.py
