[project]
name = "wishful"
version = "0.2.4"
description = "Wishful thinking for Python"
readme = "README.md"
authors = [
    { name = "Pyro", email = "pyros.sd.models@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.83.14",
    "rich>=14.0.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.12.4",
    "loguru>=0.7.3",
    "nest-asyncio>=1.6.0",
]

[build-system]
requires = ["uv_build>=0.11.0,<1.0.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit>=1.9.1",
    "coverage>=7.12.0",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "radon>=6.0.1",
    "ruff>=0.15.0",
]
